# crsq-main

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: .gitignore  2024.03.workshop.ipynb  FixedPoint.ipynb  Permutations.ipynb  QFT.ipynb  SetDistribution.ipynb  arithmetic.ipynb  ast.ipynb  hydrogen-1d.ipynb  potential.ipynb  qiskit_arithmetic_test.ipynb  qspace.ipynb  simulator.ipynb  time_evolution.ipynb
scripts/: .gitignore  README.md  run_time_evo_h1.sh  time_evo_h1.py  time_evo_h2.py
src/crsq/: __init__.py
src/crsq/blocks/: __init__.py  antisymmetrization.py  discretization.py  embed.py  embed2.py  energy_initialization.py  firstq.py  hamiltonian.py  qft.py  time_evolution.py  wave_function.py
src/crsq/blocks/time_evolution/: __init__.py  qspace.py  spec.py  suzuki_trotter.py  time_evolution.py
src/crsq/slater/: __init__.py  aregister.py  bregister.py  sigma.py
src/crsq/top/: firstq.py
src/crsq/utils/: amplitudes.py  setdistribution.py  setvalue.py  statevector.py
tests/: test_bregister.py  test_firstq.py  test_qspace.py  test_setdistribution.py  test_state_preparation.py  test_sum_state.py
